--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [project]
-name = "dpa"
+name = "dart"
 version = "0.1.0"
 description = "Deep Potential Agent for atomistic simulation"
 readme = "README.md"
+requires-python = ">=3.10,<3.12"
 
 dependencies = [
+    "tqdm",
     "requests>=2.32.3",
     "flask>=3.1.1",
     "scipy>=1.12.0",
@@ -12,7 +14,7 @@ dependencies = [
     "seekpath>=2.0.1",
     "torchaudio",
     "torchvision",
-    "tensorflow==2.15.0",
+    "tensorflow==2.19.0",
     "deepmd-kit==3.1.0",  
     "numpy==1.26.4",
     "dpdata",
@@ -22,5 +24,5 @@ dependencies = [
     "matplotlib",    
     "typing-extensions",  
     "pyyaml",
-    "science-agent-sdk"    
+    "bohr-agent-sdk"    
 ]
